Align Week 1–2 slides and expand Week 1 pre-lab exercises; add Week 1 lesson plan and Module 16 corrections.